--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,80 @@
+# ignore temporary file created by Learn
+preview-curriculum.zip
+autoconfig.yaml
+#ignore thumbnails created by windows
+Thumbs.db
+#Ignore files build by Visual Studio
+*.obj
+*.exe
+*.pdb
+*.user
+*.aps
+*.pch
+*.vspscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+*.dll
+!TechElevator*.dll
+*.lib
+*.sbr
+bin/
+obj/
+packages/
+.vs/
+
+.DS_Store
+node_modules
+/dist
+
+# Add any directories, files, or patterns you don't want to be tracked by version control
+
+# Eclipse
+.classpath
+.project
+.settings
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# .NET
+obj/
+bin/
+.vs/
+*.user
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# local env files
+.env.local
+.env.*.local
 
-### VS Code ###
-.vscode/
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-### Mac OS ###
-.DS_Store
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sw*
+*.jfm
+
+
+# Cypress e2e Testing
+cypress/screenshots
+cypress/videos
+/tests/e2e/videos/
+/tests/e2e/screenshots/
